# claudeconfigurator

./: .bank  .gitignore  AGENTS.md  README.md  build.sh  index.html  install.sh  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.mycelium/: mycelium.db
docs/superpowers/specs/: 2026-07-09-claudeconfigurator-design.md  2026-07-13-export-restore-design.md  2026-07-14-project-scope-design.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: appconfig.rs  backup.rs  bundle.rs  create.rs  frontmatter.rs  fs_cmds.rs  graph.rs  index.rs  jail.rs  lib.rs  main.rs  mcp.rs  plugins.rs  refs.rs  scope.rs  settings.rs  testutil.rs
src/lib/: AddDialog.svelte  BackupSection.svelte  CatalogView.svelte  ConfirmDialog.svelte  DocEditor.svelte  EditorPane.svelte  FrontmatterEditor.svelte  HistoryDialog.svelte  JsonNode.svelte  SchemaField.svelte  ScopeSelector.svelte  api.ts  appConfig.svelte.ts  editor.ts  nav.svelte.ts  scope.svelte.ts  settingsGroups.ts
src/views/: AgentsView.svelte  ClaudeMdView.svelte  CommandsView.svelte  FilesView.svelte  GraphView.svelte  HooksView.svelte  McpView.svelte  PluginsView.svelte  PreferencesView.svelte  SettingsView.svelte  SkillsView.svelte  registry.ts
